tests/baselines/reference/noDuplicateJsdoc1.errors.txt
a.js(2,11): error TS2304: Cannot find name 'b'.


==== a.js (1 errors) ====
    /** doc */
    const a = b = () => 0;
              ~
!!! error TS2304: Cannot find name 'b'.
    